--- a/trainning1/style.css
+++ b/trainning1/style.css
@@ -50,10 +50,9 @@ body{
     font-size: 20px;
     color: #fff;
 }
-.home-slider{
-    margin-bottom: 50px;
-}
+
 .section-title{
+    margin-top: 50px;
     text-align: center;
     font-size: 40px;
     font-weight: 700;
@@ -94,6 +93,7 @@ body{
 .banner-section-2 img{
     max-width: 100%;
     border-radius: 15px;
+    padding-bottom: 50px;
 }
 
 .wrap{
@@ -125,4 +125,37 @@ body{
 .wrap button:hover{
     background-color: #000;
     cursor: pointer;
+}
+
+.product-section{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0px 50px;
+}
+.product{
+    padding: 15px;
+}
+.product-img img{
+    max-width: 320px;
+    border: 1px solid #c0bfbf;
+    border-radius: 10px;
+}
+
+.product-name a{
+    text-decoration: none;
+    color: #000;
+}
+
+.product-name h3{
+    text-align: center;
+    max-width: 300px;
+    font-size: 16px;
+    padding: 10px;
+}
+
+.product-price{
+    text-align: center;
+    color: #ed6436;
+    font-size: 18px;
+    font-weight: 700;
 }
